.metadata/.plugins/org.eclipse.cdt.ui/clock_alarm_nios.build.log
22:56:47 **** Incremental Build of configuration Nios II for project clock_alarm_nios ****
make all 
Info: Building ../clock_alarm_nios_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../clock_alarm_nios_bsp/
[BSP build complete]
Info: Compiling main.c to obj/default/main.o
nios2-elf-gcc -xc -MP -MMD -c -I../clock_alarm_nios_bsp//HAL/inc -I../clock_alarm_nios_bsp/ -I../clock_alarm_nios_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_C_PLUS_PLUS -DALT_NO_CLEAN_EXIT -D'exit(a)=_exit(a)' -DALT_NO_EXIT -DALT_USE_DIRECT_DRIVERS -DALT_NO_INSTRUCTION_EMULATION -DALT_USE_SMALL_DRIVERS -DSMALL_C_LIB -DALT_SINGLE_THREADED    -Os -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/main.o main.c
main.c: In function 'handle_buttons':
main.c:33:6: warning: implicit declaration of function 'handle_save_configuration' [-Wimplicit-function-declaration]
      handle_save_configuration();
      ^
Info: Compiling timer.c to obj/default/timer.o
nios2-elf-gcc -xc -MP -MMD -c -I../clock_alarm_nios_bsp//HAL/inc -I../clock_alarm_nios_bsp/ -I../clock_alarm_nios_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_C_PLUS_PLUS -DALT_NO_CLEAN_EXIT -D'exit(a)=_exit(a)' -DALT_NO_EXIT -DALT_USE_DIRECT_DRIVERS -DALT_NO_INSTRUCTION_EMULATION -DALT_USE_SMALL_DRIVERS -DSMALL_C_LIB -DALT_SINGLE_THREADED    -Os -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/timer.o timer.c
In file included from ../clock_alarm_nios_bsp/drivers/inc/altera_avalon_timer_regs.h:34:0,
                 from timer.c:9:
timer.c: In function 'timer_isr':
timer.c:62:37: error: 'TIMER_BASE' undeclared (first use in this function)
     IOWR_ALTERA_AVALON_TIMER_STATUS(TIMER_BASE, 0);
                                     ^
../clock_alarm_nios_bsp//HAL/inc/io.h:70:23: note: in definition of macro '__IO_CALC_ADDRESS_NATIVE'
   ((void *)(((alt_u8*)BASE) + ((REGNUM) * (SYSTEM_BUS_WIDTH/8))))
                       ^
../clock_alarm_nios_bsp/drivers/inc/altera_avalon_timer_regs.h:43:3: note: in expansion of macro 'IOWR'
   IOWR(base, ALTERA_AVALON_TIMER_STATUS_REG, data)
   ^
timer.c:62:5: note: in expansion of macro 'IOWR_ALTERA_AVALON_TIMER_STATUS'
     IOWR_ALTERA_AVALON_TIMER_STATUS(TIMER_BASE, 0);
     ^
timer.c:62:37: note: each undeclared identifier is reported only once for each function it appears in
     IOWR_ALTERA_AVALON_TIMER_STATUS(TIMER_BASE, 0);
                                     ^
../clock_alarm_nios_bsp//HAL/inc/io.h:70:23: note: in definition of macro '__IO_CALC_ADDRESS_NATIVE'
   ((void *)(((alt_u8*)BASE) + ((REGNUM) * (SYSTEM_BUS_WIDTH/8))))
                       ^
../clock_alarm_nios_bsp/drivers/inc/altera_avalon_timer_regs.h:43:3: note: in expansion of macro 'IOWR'
   IOWR(base, ALTERA_AVALON_TIMER_STATUS_REG, data)
   ^
timer.c:62:5: note: in expansion of macro 'IOWR_ALTERA_AVALON_TIMER_STATUS'
     IOWR_ALTERA_AVALON_TIMER_STATUS(TIMER_BASE, 0);
     ^
timer.c: In function 'init_timer':
timer.c:68:25: error: 'TIMER_IRQ_INTERRUPT_CONTROLLER_ID' undeclared (first use in this function)
     alt_ic_isr_register(TIMER_IRQ_INTERRUPT_CONTROLLER_ID, TIMER_IRQ, timer_isr, NULL, NULL);
                         ^
timer.c:68:60: error: 'TIMER_IRQ' undeclared (first use in this function)
     alt_ic_isr_register(TIMER_IRQ_INTERRUPT_CONTROLLER_ID, TIMER_IRQ, timer_isr, NULL, NULL);
                                                            ^
timer.c:68:71: warning: passing argument 3 of 'alt_ic_isr_register' from incompatible pointer type [-Wincompatible-pointer-types]
     alt_ic_isr_register(TIMER_IRQ_INTERRUPT_CONTROLLER_ID, TIMER_IRQ, timer_isr, NULL, NULL);
                                                                       ^
In file included from timer.c:8:0:
../clock_alarm_nios_bsp/HAL/inc/sys/alt_irq.h:195:12: note: expected 'alt_isr_func {aka void (*)(void *)}' but argument is of type 'void (*)(void *, alt_u32) {aka void (*)(void *, long unsigned int)}'
 extern int alt_ic_isr_register(alt_u32 ic_id,
            ^
In file included from ../clock_alarm_nios_bsp/drivers/inc/altera_avalon_timer_regs.h:34:0,
                 from timer.c:9:
timer.c:69:38: error: 'TIMER_BASE' undeclared (first use in this function)
     IOWR_ALTERA_AVALON_TIMER_CONTROL(TIMER_BASE, ALTERA_AVALON_TIMER_CONTROL_START_MSK |
                                      ^
../clock_alarm_nios_bsp//HAL/inc/io.h:70:23: note: in definition of macro '__IO_CALC_ADDRESS_NATIVE'
   ((void *)(((alt_u8*)BASE) + ((REGNUM) * (SYSTEM_BUS_WIDTH/8))))
                       ^
../clock_alarm_nios_bsp/drivers/inc/altera_avalon_timer_regs.h:56:3: note: in expansion of macro 'IOWR'
   IOWR(base, ALTERA_AVALON_TIMER_CONTROL_REG, data)
   ^
timer.c:69:5: note: in expansion of macro 'IOWR_ALTERA_AVALON_TIMER_CONTROL'
     IOWR_ALTERA_AVALON_TIMER_CONTROL(TIMER_BASE, ALTERA_AVALON_TIMER_CONTROL_START_MSK |
     ^
timer.c:71:41: error: 'ALTERA_AVALON_TIMER_CONTROL_INTERRUPT_MSK' undeclared (first use in this function)
                                         ALTERA_AVALON_TIMER_CONTROL_INTERRUPT_MSK);  // Iniciar el timer con interrupciones habilitadas
                                         ^
../clock_alarm_nios_bsp//HAL/inc/io.h:75:66: note: in definition of macro 'IOWR'
   __builtin_stwio (__IO_CALC_ADDRESS_NATIVE ((BASE), (REGNUM)), (DATA))
                                                                  ^
timer.c:69:5: note: in expansion of macro 'IOWR_ALTERA_AVALON_TIMER_CONTROL'
     IOWR_ALTERA_AVALON_TIMER_CONTROL(TIMER_BASE, ALTERA_AVALON_TIMER_CONTROL_START_MSK |
     ^
make: *** [obj/default/timer.o] Error 1

22:56:49 Build Finished (took 1s.355ms)

